<resources>
    <string name="app_name">GlobaltipsApp</string>
    <string name="correo">Correo</string>
    <string name="password">Contrasenia</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Crear Cuenta</string>
    <string name="name">Nombre</string>
    <string name="correoRegistro">correo@email.com</string>
    <string name="passwordRegistro">Password</string>
    <string name="passwordRepite">Vuelve a escribir la contrasenia</string>
    <string name="btnRegistro">Registrate</string>
    <string name="btnVolver">Volver</string>
    <string name="TextArea">La Red Social para Amantes de los Viajes y el Turismo.</string>
    <string name="logo_description">logoGlobal</string>
    <string name="explore">Explore</string>
    <string name="perfil">Perfil</string>
    <string name="settings">Configuracion</string>
    <string name="Reviews">Reviews</string>
    <string name="mapa">Mapa</string>
    <string name="calendario">Calendario</string>
    <string name="mensaje">Mensaje</string>
    <string name="publicacion">Publicaciones</string>
    <string name="fotosFeed">Fotos</string>
    <string name="fiends">Amigos</string>
    <string name="travelReserve">Travel</string>
    <string name="genero">Genero</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otros">Otros</string>
    <string name="pais">Pais</string>
    <string name="Contenido">Escribe un comentario...</string>
    <string name="postear">Postear</string>
    <string name="photo_description">Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>