<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logogt" />

        <TextView
            android:id="@+id/nombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/correoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/correoRegistro"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/passwordRegistro"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistro" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnVolver" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>