<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/publick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3D2FA"
    android:backgroundTint="#EAE3F8"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="148dp"
        android:contentDescription="@string/photo_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/_21718" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:background="#D8DCF2"
        android:hint="@string/Contenido"
        android:inputType="text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postear" />
</LinearLayout>
