<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="684dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#506A7E"
            app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"

            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/public1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicacion" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/photo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fotosFeed" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/friend3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiends" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/travel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travelReserve" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/contenedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="204dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/_07171e258b8e7a4f875d19aa8ca31ea" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="390dp"
                    android:layout_height="82dp"
                    android:hint="@string/Contenido" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="top"
                app:constraint_referenced_ids="textInputLayout" />

        </FrameLayout>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>